# graphrag-rs

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Chat discussion.html  FIXTURE_BASED_TESTING_PROPOSAL.md  FIXTURE_TESTING_IMPLEMENTATION_COMPLETE.md  HOW_IT_WORKS.md  LICENSE  LLM_EVALUATION_SYSTEM_COMPLETE.md  README.md  SESSION_SUMMARY_2025-10-15.md  TEXT_PIPELINE_TESTS.md  TODO.md  clippy.toml  deny.toml  diagram.md  report.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml
.zed/: settings.json
benches/: cache_performance.rs  graph_construction.rs  pagerank_retrieval.rs  parallel_processing.rs  server_benchmarks.rs  text_processing.rs  vector_search.rs
book/: book.toml
book/src/: SUMMARY.md  introduction.md
config/: JSON5_CONFIG_GUIDE.md
config/schema/: graphrag-config.schema.json
config/templates/: README.md  academic_research.graphrag.json5  academic_research.toml  algorithmic.graphrag.json5  algorithmic_pipeline.graphrag.json5  algorithmic_pipeline.toml  dynamic_universal.graphrag.json5  dynamic_universal.toml  enrichment_example.graphrag.json5  enrichment_example.toml  hybrid.graphrag.json5  hybrid_pipeline.graphrag.json5  hybrid_pipeline.toml  legal_documents.graphrag.json5  legal_documents.toml  llm_hierarchical_summarization.graphrag.json5  narrative_fiction.graphrag.json5  narrative_fiction.toml  philosophical_dialogue.graphrag.json5  semantic.graphrag.json5  semantic_pipeline.graphrag.json5  semantic_pipeline.toml  simple_llm_summarization.graphrag.json5  symposium_graphrag_rs_philosophy.graphrag.json5  symposium_with_llm.graphrag.json5  symposium_zero_cost.graphrag.json5  technical_documentation.graphrag.json5  technical_documentation.toml  web_blog_content.graphrag.json5  web_blog_content.toml  zero_cost_approaches.graphrag.json5
docs-example/: Readme-First.txt  config_tom_sawyer_complete.toml  symposium_config.toml
examples/: 01_basic_usage.rs  02_stateful_api.rs  03_builder_api.rs  04_with_ollama.rs  05_batch_processing.rs  MULTI_DOCUMENT_PIPELINE.md  benchmark_quality_improvements.rs  complete_zero_cost_graphrag_demo.rs  graphrag_multi_doc_server.rs  llm_hierarchical_summarization_demo.rs  multi_document_pipeline.rs  real_ollama_pipeline.rs  symposium_real_search.rs  symposium_test.rs  test_multi_doc_server.sh  test_real_embeddings.rs  zero_cost_approaches_demo.rs
examples/graphrag-leptos-demo/: Cargo.toml  README.md  RUNTIME_TESTING_GUIDE.md  STATUS.md  Trunk.toml  index.html  setup-model.sh  test-helpers.js
examples/graphrag-leptos-demo/src/: lib.rs  main.rs  multi_doc.rs
examples/wasm-multi-doc-demo/: README.md  app.js  index.html  styles.css  worker.js
examples/web-app/: Cargo.toml  README.md  Trunk.toml  index.html
examples/web-app/.cargo/: config.toml
examples/web-app/src/: lib.rs  main.rs
graphrag/: Cargo.toml  README.md
graphrag-cli/: Cargo.toml  GUIDA_ITALIANA.md  README.md  SLASH_COMMANDS.md  STORAGE_LOCATIONS.md  USER_GUIDE.md  WORKSPACE_COMMANDS.md
graphrag-cli/src/: action.rs  app.rs  config.rs  lib.rs  main.rs  mode.rs  query_history.rs  theme.rs  tui.rs  workspace.rs
graphrag-core/: ADVANCED_FEATURES.md  CROSS_ENCODER_INTEGRATION.md  Cargo.toml  EMBEDDINGS_CONFIG.md  ENTITY_EXTRACTION.md  HIPPORAG_INTEGRATION.md  LEIDEN_INTEGRATION.md  LIGHTRAG_INTEGRATION.md  OLLAMA_INTEGRATION.md  PIPELINE_ARCHITECTURE.md  QUICKSTART.md  README.md  add_rograg_docs.sh  complete_rograg_docs.sh  config-huggingface.toml  config-openai.toml  config-voyage.toml  test_indicatif.rs  test_indicatif_draw.rs  test_indicatif_hide.rs
graphrag-core/benches/: advanced_features_benchmark.rs  incremental_benchmark.rs
graphrag-core/config-examples/: advanced-features.toml  quick-start.toml
graphrag-core/examples/: README_symposium_trait_based_chunking.md  advanced_nlp_demo.rs  complete_zero_cost_graphrag_demo.rs  document_enrichment_demo.rs  embeddings.toml  embeddings_demo.rs  embeddings_from_config.rs  hierarchical_graphrag_demo.rs  llm_evaluation_demo.rs  symposium_graphrag_rs_philosophy.rs  symposium_trait_based_chunking.rs  symposium_with_llm_query.rs  symposium_zero_cost_query.rs  tom_sawyer_workspace.rs  workspace_demo.rs
graphrag-core/src/: async_graphrag.rs  inference.rs  lib.rs  pipeline_executor.rs
graphrag-core/templates/: README.md  financial.toml  general.toml  legal.toml  medical.toml  technical.toml
graphrag-core/tests/: advanced_features_integration.rs  bar_rag_integration.rs  contextual_enricher_e2e.rs  dynamic_weighting_tests.rs  incremental_integration.rs  (+3 more)
graphrag-server/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
graphrag-server/src/: auth.rs  config_endpoints.rs  config_handler.rs  distributed_cache.rs  embeddings.rs  graph_persistence.rs  handlers.rs  lancedb_store.rs  lib.rs  main.rs  main_axum_old.rs  main_backup.rs  models.rs  multi_model_embeddings.rs  observability.rs  qdrant_store.rs  validation.rs
graphrag-wasm/: BEST_EMBEDDING_MODELS.md  Cargo.toml  GPU_EMBEDDINGS.md  LLM_PROVIDERS.md  OLLAMA_INTEGRATION.md  ONNX_EMBEDDINGS.md  QUICK_START.md  README.md  SETTINGS_GUIDE.md  Trunk.toml  UI_UX_DESIGN.md  WEBLLM_INTEGRATION.md  index.html  package.json  tailwind.config.js  tailwind.css  test.sh  webllm-worker.js  webllm.js
graphrag/src/: lib.rs  main.rs
graphrag_py/: CHANGELOG.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  config.example.toml  pyproject.toml  verify_installation.py
graphrag_py/examples/: basic_usage.py  document_qa.py
graphrag_py/src/: lib.rs
graphrag_py/src/graphrag_py/: __init__.py
graphrag_py/tests/: test_binding.py
src/: async_graphrag.rs  automatic_entity_linking.rs  builder.rs  caching_test.rs  inference.rs  lib.rs  main.rs  phase_saver.rs  test_utils.rs
tests/: caching_integration.rs  config_integration_test.rs  http_endpoint_tests.rs  hybrid_retrieval_tests.rs  integration_tests.rs  modular_integration_tests.rs  property_tests.proptest-regressions  property_tests.rs  server_integration_tests.rs  zero_cost_approaches_integration_tests.rs
(+370 files in other folders)
