[package]
name = "graphrag_py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "graphrag_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py39"] }
pyo3-async-runtimes = { version = "0.21", features = ["tokio-runtime"] }
graphrag-core = { path = "../graphrag-core" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
