[package]
name = "graphrag-leptos-demo"
version = "0.1.0"
edition = "2021"
authors = ["GraphRAG Contributors"]

# Empty workspace to prevent auto-discovery
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
graphrag-leptos = { path = "../../graphrag-leptos" }
graphrag-wasm = { path = "../../graphrag-wasm" }

# Leptos framework
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = "0.8"
leptos_router = "0.8"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Window",
    "Performance",
] }
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
console_error_panic_hook = "0.1"
wasm-logger = "0.2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
