[package]
name = "graphrag-web-app"
version = "0.1.0"
edition = "2021"
authors = ["GraphRAG-RS Contributors"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# GraphRAG Leptos components (demonstrates all UI components)
graphrag-leptos = { path = "../../graphrag-leptos" }
graphrag-wasm = { path = "../../graphrag-wasm" }

# Leptos framework
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = "0.8"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Window", "Navigator", "MouseEvent", "KeyboardEvent"] }
js-sys = "0.3"

# Utilities
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-timers = { version = "0.3", features = ["futures"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
